<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/flIdentify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp">

        <View
            android:id="@+id/vBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="260dp"
            android:background="#88000000" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:paddingLeft="12dp">

            <TextView
                android:id="@+id/tvName"
                style="@style/b15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="135dp">

                <TextView
                    style="@style/c15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/year" />

                <EditText
                    android:id="@+id/etYear"
                    style="@style/i15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/transparent"
                    android:hint="@string/year_hint" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="90dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/c15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/collection_value" />

                <EditText
                    android:id="@+id/etValue"
                    style="@style/i15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/transparent"
                    android:hint="@string/value_hint" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="bottom">

                <TextView
                    style="@style/c15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/identify_content" />

                <EditText
                    android:id="@+id/etContent"
                    style="@style/i15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/transparent"
                    android:gravity="top"
                    android:hint="@string/content_hint"
                    android:paddingTop="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp" />

            </RelativeLayout>

        </FrameLayout>

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="230dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/icon_close" />

        <ImageView
            android:id="@+id/ivPic"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="190dp"
            android:layout_marginLeft="12dp"
            android:scaleType="centerCrop"
            android:background="@drawable/frame_white"
            android:padding="5dp" />

    </FrameLayout>

    <Button
        android:id="@+id/btnIdentify"
        style="@style/w15"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:background="@color/orange"
        android:text="@string/identify" />
</FrameLayout>