<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_title_tv" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:gravity="center_vertical">

                <TextView
                    style="@style/b15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/etTitle"
                    style="@style/i15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/transparent"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:layout_width="17dp"
                android:layout_height="1px"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/white">

                <TextView
                    style="@style/b15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/etContent"
                    style="@style/i15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:singleLine="false"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:hint="@string/description_blank" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clipToPadding="true"
                android:padding="10dp" />

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/rlPublishType"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_selector">

                <TextView
                    style="@style/b15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:text="@string/publish_type" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@color/black" />

                <TextView
                    android:id="@+id/tvPublishType"
                    style="@style/c15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:layout_centerVertical="true"
                    android:hint="@string/identify_paid" />

                <View
                    android:layout_width="17dp"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlType"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_selector">

                <TextView
                    style="@style/b15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:text="@string/type" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@color/black" />

                <TextView
                    android:id="@+id/tvType"
                    style="@style/c15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:layout_centerVertical="true"
                    android:hint="@string/required" />
            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/rlSelectExpert"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_selector">

                <TextView
                    style="@style/b15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:text="@string/select_appraiser" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:src="@color/black" />

                <View
                    android:layout_width="17dp"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white" />
            </RelativeLayout>

            <include layout="@layout/item_export"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/llAgree"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/cbAgree"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:checked="true"
                    android:button="@drawable/orange_selector" />

                <TextView
                    style="@style/d12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/read_and_agree" />

                <TextView
                    android:id="@+id/tvAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_jiangdi"
                    android:textColor="@color/orange"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>