<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/base_title" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@color/white">

        <TextView
            style="@style/c13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:text="@string/deposit" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/c13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="20dp">

        <CheckBox
            android:id="@+id/cbAgree"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:checked="true"
            android:button="@drawable/orange_selector" />

        <TextView
            style="@style/d12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/read_and_agree" />

        <TextView
            android:id="@+id/tvAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_auction"
            android:textColor="@color/orange"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCmd"
        style="@style/w15"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/btn_orange"
        android:text="@string/pay_deposit" />
</FrameLayout>